@@ -1,18 +1,19 @@
 package com.ceos22.cgv_clone.web.service;
 
-import com.ceos22.cgv_clone.web.domain.Cinema;
-import com.ceos22.cgv_clone.web.domain.Schedule;
-import com.ceos22.cgv_clone.web.domain.Theater;
+import com.ceos22.cgv_clone.global.apiPayload.code.ErrorStatus;
+import com.ceos22.cgv_clone.global.apiPayload.exception.GeneralException;
+import com.ceos22.cgv_clone.web.domain.*;
 import com.ceos22.cgv_clone.web.domain.enums.Region;
-import com.ceos22.cgv_clone.web.dto.CinemaResDto;
-import com.ceos22.cgv_clone.web.dto.ScheduleResDto;
-import com.ceos22.cgv_clone.web.dto.TheaterResDto;
+import com.ceos22.cgv_clone.web.dto.CinemaResponseDto;
+import com.ceos22.cgv_clone.web.dto.ScheduleResponseDto;
+import com.ceos22.cgv_clone.web.dto.TheaterResponseDto;
+import com.ceos22.cgv_clone.web.repository.CinemaPreferRepository;
 import com.ceos22.cgv_clone.web.repository.CinemaRepository;
 import com.ceos22.cgv_clone.web.repository.ScheduleRepository;
 import com.ceos22.cgv_clone.web.repository.TheaterRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -23,8 +24,10 @@ public class CinemaService {
     private final CinemaRepository cinemaRepository;
     private final TheaterRepository theaterRepository;
     private final ScheduleRepository scheduleRepository;
+    private final CinemaPreferRepository cinemaPreferRepository;
 
-    public List<CinemaResDto.CinemaDto> getCinemas(Region region) {
+    @Transactional(readOnly = true)
+    public List<CinemaResponseDto.CinemaDto> getCinemas(Region region) {
 
         List<Cinema> cinemaList = null;
 
@@ -34,31 +37,47 @@ public class CinemaService {
             cinemaList = cinemaRepository.findByRegion(region);
         }
 
-        List<CinemaResDto.CinemaDto> dtoList = cinemaList.stream()
-                .map(CinemaResDto.CinemaDto::of)
+        List<CinemaResponseDto.CinemaDto> dtoList = cinemaList.stream()
+                .map(CinemaResponseDto.CinemaDto::of)
                 .collect(Collectors.toList());
 
         return dtoList;
     }
 
-    public CinemaResDto.CinemaDetailDto getCinema(Long cinemaId) {
+    public CinemaResponseDto.CinemaDetailDto getCinema(Long cinemaId) {
 
         Cinema cinema = cinemaRepository.findById(cinemaId)
                 .orElseThrow(()-> new IllegalArgumentException("Cinema not found with id: " + cinemaId));
 
         List<Theater> theaterList = theaterRepository.findByCinemaId(cinemaId);
 
-        List<TheaterResDto.TheaterDto> theaterDtos = theaterList.stream()
-                .map(thater-> {
-                    List<Schedule> schedules = scheduleRepository.findByTheaterId(thater.getId());
-                    List<ScheduleResDto.ScheduleDto> scheduleDtos = schedules.stream()
-                            .map(ScheduleResDto.ScheduleDto::of)
-                            .toList();
-                    return TheaterResDto.TheaterDto.of(thater,scheduleDtos);
-                })
-                .toList();
+        List<TheaterResponseDto.TheaterDto> theaterDtos = theaterList.stream()
+                .map(theater-> {
+                    List<ScheduleResponseDto.ScheduleDto> scheduleDtos = scheduleRepository
+                            .findByTheaterId(theater.getId()).stream()
+                            .filter(Schedule::notStarted)
+                            .map(ScheduleResponseDto.ScheduleDto::of)
+                            .collect(Collectors.toList());
 
-        CinemaResDto.CinemaDetailDto cinemaDetailDto = CinemaResDto.CinemaDetailDto.of(cinema,theaterDtos);
-        return cinemaDetailDto;
+                    return TheaterResponseDto.TheaterDto.of(theater, scheduleDtos);
+                })
+                .collect(Collectors.toList());
+
+        return CinemaResponseDto.CinemaDetailDto.of(cinema,theaterDtos);
+    }
+
+    public void preferCinema(Long cinemaId, User user) {
+        Cinema cinema = cinemaRepository.findById(cinemaId)
+                .orElseThrow(()-> new GeneralException(ErrorStatus.CINEMA_NOT_FOUND));
+
+        if (cinemaPreferRepository.existsByUserAndCinema(user,cinema)){
+            throw new GeneralException(ErrorStatus.ALREADY_PREFERED_CINEMA);
+        }
+        CinemaPrefer cinemaPrefer = CinemaPrefer.builder()
+                .cinema(cinema)
+                .user(user)
+                .build();
+
+        cinemaPreferRepository.save(cinemaPrefer);
     }
 }
